[package]

name = "libarchive-sys"
version = "0.0.1"
authors = ["Nuzhdin Urii aka tz-lom <nuzhdin.urii@gmail.com>"]
license = "MIT"

description="Bindings to system library libarchive"
repository="https://github.com/tz-lom/libarchive-sys"


build = "build.rs"

[dependencies]
time = "0.1.32"
libc = "0.1.10"
bitflags="0.3.2"

[lib]
name = "archive"

[build-dependencies]
pkg-config = "^0.3.3"
